# turbit-task

./: .gitignore  Dockerfile  compose.yaml  deploy.sh  init-mongo.js
customlogger/: pyproject.toml
customlogger/customlogger/: customlogger.py
customlogger/customlogger.egg-info/: requires.txt
db/: compose.yaml  init-mongo.js
mongoconnector/: pyproject.toml
mongoconnector/mongoconnector/: mongo_connector.py
task-1/: fetch-data.py
task-1/app/: main.py  requirements.txt
task-1/app/database/: mongo_connector.py
task-1/app/models/: comments.py  posts.py  report.py  user.py
task-1/app/routes/: comments.py  posts.py  reports.py  users.py
task-1/app/services/: populate-db-service.py  populate_db.py
task-1/app/tests/: requirements-test.txt  test_comments.py  test_posts.py  test_reports.py  test_users.py
task-1/client-demo/: index.html  package.json
task-1/client-demo/src/: App.tsx
task-1/client-demo/src/components/: UserReportList.tsx
task-1/client-demo/src/services/: api_service.ts
task-1/client-demo/src/types/: interfaces.ts
task-2/api/: main.py  requirements.txt
task-2/api/database/: mongo_connector.py
task-2/api/models/: timeseries.py
task-2/api/routes/: timeseries.py
task-2/api/services/: csv_service.py
task-2/api/tests/: test_timeseries.py  test_turbines.py
task-2/client-dashboard/: index.html  package.json
task-2/client-dashboard/src/: App.tsx  Routes.tsx  index.css  main.tsx
task-2/client-dashboard/src/services/: apiService.ts
task-2/client-dashboard/src/types/: interfaces.ts
(+14 files in other folders)
